// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SourcesContext should apply a hook for retrieving data from multiple selectors: selector responses 1`] = `
Object {
  "errorResponse": Object {
    "data": Array [],
    "date": undefined,
    "error": true,
    "errorMessage": "Lorem ipsum",
    "expandedRows": undefined,
    "fulfilled": undefined,
    "hasData": false,
    "pending": undefined,
    "selectedRows": undefined,
    "totalResults": 0,
  },
  "fulfilledResponse": Object {
    "data": Array [
      "dolor",
      "sit",
    ],
    "date": undefined,
    "error": undefined,
    "errorMessage": undefined,
    "expandedRows": undefined,
    "fulfilled": true,
    "hasData": false,
    "pending": undefined,
    "selectedRows": undefined,
    "totalResults": 0,
  },
  "mockStoreSuccessResponse": Object {
    "data": Array [
      "lorem",
      "ipsum",
    ],
    "date": undefined,
    "error": false,
    "errorMessage": null,
    "expandedRows": Object {},
    "fulfilled": true,
    "hasData": false,
    "pending": false,
    "selectedRows": Object {},
    "totalResults": 0,
  },
  "pendingResponse": Object {
    "data": Array [],
    "date": undefined,
    "error": undefined,
    "errorMessage": undefined,
    "expandedRows": undefined,
    "fulfilled": undefined,
    "hasData": false,
    "pending": true,
    "selectedRows": undefined,
    "totalResults": 0,
  },
}
`;

exports[`SourcesContext should apply a hook for returning a get response: get responses 1`] = `
Object {
  "errorResponse": Object {
    "error": true,
    "message": "Lorem ipsum",
  },
  "fulfilledResponse": Object {
    "data": Object {
      "view": Object {
        "results": Array [
          "dolor",
          "sit",
        ],
      },
    },
    "fulfilled": true,
  },
  "mockStoreSuccessResponse": Object {
    "data": Array [
      "lorem",
      "ipsum",
    ],
    "date": undefined,
    "error": false,
    "errorMessage": null,
    "expandedRows": Object {},
    "fulfilled": true,
    "hasData": false,
    "pending": false,
    "selectedRows": Object {},
    "totalResults": 0,
  },
  "pendingResponse": Object {
    "pending": true,
  },
}
`;

exports[`SourcesContext should attempt to poll sources: timeout 1`] = `
Array [
  Array [
    Object {
      "callback": true,
      "interval": 0,
    },
  ],
  Array [
    Object {
      "callback": false,
      "interval": 0,
    },
  ],
]
`;

exports[`SourcesContext should handle deleting a source with a confirmation: dispatch onDelete 1`] = `
Array [
  Array [
    Object {
      "body": undefined,
      "confirmButtonText": "t(form-dialog.label, {\\"context\\":\\"delete\\"})",
      "heading": "t(form-dialog.confirmation_heading, {\\"context\\":\\"delete-source\\",\\"count\\":1,\\"name\\":\\"lorem ipsum name\\"}, [object Object])",
      "onConfirm": [Function],
      "title": "t(form-dialog.confirmation_title, {\\"context\\":\\"delete-source\\",\\"count\\":1})",
    },
  ],
]
`;

exports[`SourcesContext should return specific properties: specific properties 1`] = `
Object {
  "INITIAL_QUERY": Object {
    "ordering": "name",
    "page": 1,
    "page_size": 10,
  },
  "VIEW_ID": "sources",
  "useGetSources": [Function],
  "useOnDelete": [Function],
  "useOnEdit": [Function],
  "useOnExpand": [Function],
  "useOnScan": [Function],
  "useOnSelect": [Function],
  "usePoll": [Function],
  "useSources": [Function],
}
`;
